--- a/Day3/ex01_Skeleton.ipynb
+++ b/Day3/ex01_Skeleton.ipynb
@@ -26,7 +26,7 @@
    "outputs": [],
    "source": [
     "def ending_balance(principal, apr, years, interest_frequency):\n",
-    "    "
+    "    # Complete this"
    ]
   },
   {
