Completed ex01, ex02, ex03

--- a/Day3/ex01_Skeleton.ipynb
+++ b/Day3/ex01_Skeleton.ipynb
@@ -26,14 +26,25 @@
    "outputs": [],
    "source": [
     "def ending_balance(principal, apr, years, interest_frequency):\n",
-    "    # Complete this"
+    "    return principal * (1 + apr/100/interest_frequency)**(years*interest_frequency)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23933.610496468293"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "principal = 20000\n",
     "apr = 6\n",
@@ -44,9 +55,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4331.4268225123205"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "principal = 4000\n",
     "apr = 2\n",
@@ -79,7 +101,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.13.5"
   },
   "orig_nbformat": 4
  },
