--- a/Day3/ex02_Skeleton.ipynb
+++ b/Day3/ex02_Skeleton.ipynb
@@ -11,30 +11,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def remove_duplicates(nums):\n"
+    "def remove_duplicates(nums):\n",
+    "    for num in nums:\n",
+    "        if nums.count(num) > 1:\n",
+    "            nums.remove(num)\n",
+    "    return nums"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "nums = [0, 0, 0, 1, 1, 2, 2, 3, 3]\n",
     "remove_duplicates(nums)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nums"
    ]
   },
   {
@@ -61,7 +67,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.13.5"
   },
   "orig_nbformat": 4
  },
