--- a/Day3/ex03_Skeleton.ipynb
+++ b/Day3/ex03_Skeleton.ipynb
@@ -11,19 +11,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "def reverse_str(s: str, k: int):\n",
-    "\n"
+    "    return \"\".join([(s[i-k:i][::-1] + s[i:i+k]) for i in range(k, len(s), 2*k)])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "s = \"abcdefg\"\n",
     "k = 2\n",
@@ -32,9 +43,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "s = \"abcd\"\n",
     "k = 3\n",
@@ -65,7 +87,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.13.5"
   },
   "orig_nbformat": 4
  },
