--- a/Day3/ex05_Skeleton.ipynb
+++ b/Day3/ex05_Skeleton.ipynb
@@ -12,26 +12,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def class_dictionary(classes):\n",
-    "    "
+    "def class_dictionary(classes: list) -> dict:\n",
+    "    classes_dict = dict()\n",
+    "    for cls in classes:\n",
+    "        category, courseID = cls.split(\"-\")\n",
+    "        if category not in classes_dict:\n",
+    "            classes_dict[category] = set()\n",
+    "        classes_dict[category].add(courseID)\n",
+    "    return classes_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "classes = [\"computation-MSDS597\",\n",
     "           \"statistics-MSDS504\", \n",
     "           \"computation-MSDS501\", \n",
     "           \"computation-MSDS501\", \n",
     "           \"statistics-MSDS504\"]\n",
-    "class_dictionary(classes) #== {'computation': {'MSDS501', 'MSDS597'}, 'statistics': {'MSDS504'}}"
+    "class_dictionary(classes) == {'computation': {'MSDS501', 'MSDS597'}, 'statistics': {'MSDS504'}}"
    ]
   },
   {
@@ -44,9 +61,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['MSDS597', 'MSDS501']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cl_list = list(class_dictionary(classes)[\"computation\"])\n",
     "cl_list.reverse()\n",
@@ -77,7 +105,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.13.5"
   },
   "orig_nbformat": 4
  },
