Completed day 4 ex04

--- a/Day4/ex04_Skeleton.ipynb
+++ b/Day4/ex04_Skeleton.ipynb
@@ -19,14 +19,67 @@
    "id": "87335bab",
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "1f16c75d",
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "input(\"Enter a positive number (0 to stop): \")"
+    "def prime_number(n: int) -> bool:\n",
+    "    if n < 2:\n",
+    "        return False \n",
+    "    for i in range(2, n):\n",
+    "        if (n % i) == 0:\n",
+    "            return False\n",
+    "    return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "885e5fc5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "user_input is not a prime number\n",
+      "user_input is a prime number\n",
+      "user_input is not a prime number\n",
+      "user_input is not a prime number\n",
+      "user_input is not a prime number\n",
+      "user_input is not a prime number\n",
+      "user_input is not a prime number\n",
+      "user_input is not a prime number\n",
+      "user_input is not a prime number\n",
+      "user_input is not a prime number\n",
+      "user_input is a prime number\n",
+      "user_input is a prime number\n"
+     ]
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "    n = int(input(\"Enter a positive number (0 to stop): \"))\n",
+    "    try:\n",
+    "        if n == 0:\n",
+    "            break\n",
+    "        if prime_number(n):\n",
+    "            print(\"user_input is a prime number\")\n",
+    "        else:\n",
+    "            print(\"user_input is not a prime number\")\n",
+    "    except TypeError:\n",
+    "        print(\"Please input an integer\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f16c75d",
+   "id": "828016e9",
    "metadata": {},
    "outputs": [],
    "source": []
