--- a/Day5/ex02-palindrome_Skeleton.ipynb
+++ b/Day5/ex02-palindrome_Skeleton.ipynb
@@ -23,8 +23,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def find_palindrome_words():\n",
-    "   "
+    "def find_palindrome_words(input: str):\n",
+    "    \"\"\"\n",
+    "    Find a list of strings that are palindrome words \n",
+    "\n",
+    "    Args:\n",
+    "        input (str): A sentence a string of multiple words seperated by spaces\n",
+    "\n",
+    "    Returns:\n",
+    "        (list): List of trings that are palindrome words in input\n",
+    "    \"\"\"\n",
+    "    return [i for i in input.split() if (i.lower() == i[::-1].lower())]"
    ]
   },
   {
@@ -60,7 +69,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -74,7 +83,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
