--- a/Day5/ex01-function_calls.ipynb
+++ b/Day5/ex01-function_calls.ipynb
@@ -12,7 +12,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
+   "id": "f1d769c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0, 1)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "counter = 0\n",
+    "def sth():\n",
+    "    counter_1 = counter + 1\n",
+    "    return counter, counter_1\n",
+    "sth()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c48c44a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "counter = [0]\n",
+    "def sth():\n",
+    "    counter.append(1)\n",
+    "    counter = [1]\n",
+    "sth()\n",
+    "counter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64c4dead",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'eman'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "0a717383-63b0-4ed3-814a-f9f80952dab1",
    "metadata": {
     "tags": []
