--- a/Day5/ex01-function_calls.ipynb
+++ b/Day5/ex01-function_calls.ipynb
@@ -48,6 +48,28 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "execution_count": 3,
+   "id": "0a60b923",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'dwoodbridge@usfca.edu'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "generate_emails_keyword(\"Diane\", \"Woodbridge\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "175c3456-7592-465c-a6a8-ee4db39d8af5",
    "metadata": {},
    "outputs": [
@@ -58,16 +80,19 @@
       ]
      },
      "execution_count": 4,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "generate_emails_keyword(last_name = 'Woodbridge', first_name = 'Diane')"
+    "generate_emails_keyword(last_name = 'Woodbridge', first_name = 'Diane')"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
    "execution_count": 5,
    "id": "4749169c-5812-4f25-b026-b8830194ec37",
    "metadata": {},
@@ -80,6 +105,7 @@
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
       "Cell \u001b[0;32mIn[5], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m generate_emails_keyword(first_name \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDiane\u001b[39m\u001b[38;5;124m'\u001b[39m, last_name \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mWoodbridge\u001b[39m\u001b[38;5;124m'\u001b[39m, title \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDr.\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[5], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m generate_emails_keyword(first_name \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDiane\u001b[39m\u001b[38;5;124m'\u001b[39m, last_name \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mWoodbridge\u001b[39m\u001b[38;5;124m'\u001b[39m, title \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDr.\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
       "\u001b[0;31mTypeError\u001b[0m: generate_emails_keyword() got an unexpected keyword argument 'title'"
      ]
     }
@@ -91,6 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "execution_count": 6,
    "id": "8f900b36-9e5e-4cc4-af94-d8d74c2c085a",
    "metadata": {},
    "outputs": [
@@ -100,6 +127,7 @@
        "'dwoodbridge@usfca.edu'"
       ]
      },
+     "execution_count": 6,
      "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
@@ -111,6 +139,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
    "execution_count": 7,
    "id": "9a1f39a0-acc8-4cba-998d-7288d6e221ac",
    "metadata": {},
@@ -145,6 +174,28 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "execution_count": 8,
+   "id": "9dfa375b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'dwoodbridge@usfca.edu'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "generate_emails_arbitary(\"Diane\", \"Woodbridge\", \"Dr\", \"..\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "8c1aa695-d0a8-49a4-a2c6-32d567024872",
    "metadata": {},
    "outputs": [
@@ -155,6 +206,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m generate_emails_arbitary(first_name \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDiane\u001b[39m\u001b[38;5;124m'\u001b[39m, last_name \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mWoodbridge\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
       "Cell \u001b[0;32mIn[9], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m generate_emails_arbitary(first_name \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDiane\u001b[39m\u001b[38;5;124m'\u001b[39m, last_name \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mWoodbridge\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
       "\u001b[0;31mTypeError\u001b[0m: generate_emails_arbitary() got an unexpected keyword argument 'first_name'"
      ]
@@ -210,6 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "execution_count": 10,
    "id": "b43d120b-029f-4e82-a2ec-83ee19c4655c",
    "metadata": {},
    "outputs": [],
@@ -222,6 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "execution_count": 11,
    "id": "6c9816f2-4ff5-427d-bad7-2caece77b4ca",
    "metadata": {},
    "outputs": [
@@ -231,6 +285,7 @@
        "'dwoodbridge@usfca.edu'"
       ]
      },
+     "execution_count": 11,
      "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
@@ -243,6 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "execution_count": 12,
    "id": "eb4bfeab-bc65-4aeb-8c43-ceeca63484a7",
    "metadata": {},
    "outputs": [
@@ -252,6 +308,7 @@
        "'dwoodbridge@usfca.edu'"
       ]
      },
+     "execution_count": 12,
      "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
@@ -295,7 +352,6 @@
  "metadata": {
   "kernelspec": {
    "display_name": "base",
-   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -309,7 +365,6 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
    "version": "3.13.5"
   }
  },
