Completed ex01, ex02, ex04, ex06

--- a/Day7/Skeleton/ex02-encapsulation.ipynb
+++ b/Day7/Skeleton/ex02-encapsulation.ipynb
@@ -16,12 +16,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a74e682c",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Human():\n",
+    "    def __init__(self, name, age, wage):\n",
+    "        self.name = name\n",
+    "        self._age = age\n",
+    "        self.__wage = wage\n",
     "    "
    ]
   },
@@ -46,7 +50,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(obj\u001b[38;5;241m.\u001b[39mname)\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(obj\u001b[38;5;241m.\u001b[39m_age)\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28mprint\u001b[39m(obj\u001b[38;5;241m.\u001b[39m__wage)\n",
+      "Cell \u001b[0;32mIn[2], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(obj\u001b[38;5;241m.\u001b[39mname)  \u001b[38;5;66;03m# John\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(obj\u001b[38;5;241m.\u001b[39m_age)  \u001b[38;5;66;03m# 24 \u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28mprint\u001b[39m(obj\u001b[38;5;241m.\u001b[39m__wage)\n",
       "\u001b[0;31mAttributeError\u001b[0m: 'Human' object has no attribute '__wage'"
      ]
     }
@@ -55,13 +59,14 @@
     "obj = Human(\"John\", 24, 85000)\n",
     "print(obj.name)  # John\n",
     "print(obj._age)  # 24 \n",
-    "print(obj.__wage)  # Error"
+    "print(obj.__wage)  # Error\n",
+    "print(obj._Human__wage) # This works though"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bba1d081",
+   "id": "da508c4a",
    "metadata": {},
    "outputs": [],
    "source": []
