--- a/Day7/Skeleton/ex06.ipynb
+++ b/Day7/Skeleton/ex06.ipynb
@@ -2,21 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ebea8006",
    "metadata": {},
    "outputs": [],
    "source": [
     "class FileReader:\n",
     "    def __init__(self, file_path):\n",
-    "       \n",
+    "        self.file_path = file_path\n",
+    "        self.load()\n",
+    "        self.line_count = len(self.lines)\n",
+    "        self.check_file_format()\n",
     "    \n",
     "    def load(self):\n",
-    "        \n",
+    "        with open(self.file_path, 'r') as file:\n",
+    "            self.lines = file.readlines()\n",
+    "            \n",
     "    def print(self, n = 10):\n",
+    "        for line in self.lines[:n]:\n",
+    "            print(line)\n",
     "        \n",
     "    def check_file_format(self):\n",
-    "        "
+    "        extension = self.file_path.split('.')[-1]\n",
+    "        if extension in ['tsv', 'csv', 'json']: \n",
+    "            self.file_format = extension\n",
+    "        else:\n",
+    "            self.file_format = 'unknown'"
    ]
   },
   {
@@ -25,6 +36,13 @@
    "id": "501ee6d2",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tsv\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -37,8 +55,8 @@
     }
    ],
    "source": [
-    "file_reader = FileReader(\"../Data/countries.tsv\")\n",
-    "file_reader.file_format\n",
+    "file_reader = FileReader(\"../../Data/countries.tsv\")\n",
+    "print(file_reader.file_format)\n",
     "file_reader.line_count"
    ]
   },
@@ -53,15 +71,25 @@
      "output_type": "stream",
      "text": [
       "AD\tAndorra\t42.5\t1.5\n",
+      "\n",
       "AE\tUnited Arab Emirates\t24\t54\n",
+      "\n",
       "AF\tAfghanistan\t33\t65\n",
+      "\n",
       "AG\tAntigua and Barbuda\t17.05\t-61.8\n",
+      "\n",
       "AI\tAnguilla\t18.25\t-63.17\n",
+      "\n",
       "AL\tAlbania\t41\t20\n",
+      "\n",
       "AM\tArmenia\t40\t45\n",
+      "\n",
       "AN\tNetherlands Antilles\t12.25\t-68.75\n",
+      "\n",
       "AO\tAngola\t-12.5\t18.5\n",
-      "AP\tAsia/Pacific Region\t35\t105\n"
+      "\n",
+      "AP\tAsia/Pacific Region\t35\t105\n",
+      "\n"
      ]
     }
    ],
@@ -80,10 +108,15 @@
      "output_type": "stream",
      "text": [
       "AD\tAndorra\t42.5\t1.5\n",
+      "\n",
       "AE\tUnited Arab Emirates\t24\t54\n",
+      "\n",
       "AF\tAfghanistan\t33\t65\n",
+      "\n",
       "AG\tAntigua and Barbuda\t17.05\t-61.8\n",
-      "AI\tAnguilla\t18.25\t-63.17\n"
+      "\n",
+      "AI\tAnguilla\t18.25\t-63.17\n",
+      "\n"
      ]
     }
    ],
@@ -93,28 +126,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "87562141",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class CSVReader():\n",
-    "    "
+    "class CSVReader(FileReader):\n",
+    "    def __init__(self, file_path, header=False):\n",
+    "        super().__init__(file_path)\n",
+    "        if self.file_format not in ['csv', 'tsv']:\n",
+    "            raise TypeError\n",
+    "        self.header = header\n",
+    "        if self.header:\n",
+    "            self.header_lines = self.lines[0]\n",
+    "            print(self.header_lines)\n",
+    "        self.split()\n",
+    "    \n",
+    "    def split(self):\n",
+    "        if self.file_format == 'csv':\n",
+    "            delimiter = \",\"\n",
+    "        elif self.file_format == 'tsv':\n",
+    "            delimiter = '\\t'    \n",
+    "        self.splitted_lines = [line.strip().split(delimiter) for line in self.lines]\n",
+    "        return self.splitted_lines\n",
+    "    \n",
+    "    def print(self, n=10):\n",
+    "        if self.header:\n",
+    "            for i in range(1, n):\n",
+    "                print(f'{i+1}: {self.splitted_lines[i]}')\n",
+    "        else:\n",
+    "            for i in range(n):\n",
+    "                print(f'{i+1}: {self.splitted_lines[i]}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "id": "2e2279fd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "csv_file = CSVReader(\"../Data/countries.tsv\")"
+    "csv_file = CSVReader(\"../../Data/countries.tsv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "id": "b9823ec6",
    "metadata": {},
    "outputs": [
@@ -124,7 +181,7 @@
        "74"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "5f98dddb",
    "metadata": {},
    "outputs": [
@@ -155,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "2a1cd841",
    "metadata": {},
    "outputs": [
@@ -163,32 +220,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "start_idx - 0\n",
-      "1 : ['date', 'site_id', 'daily_mean_pm10_conentration', 'daily_aqi_value']\n",
-      "2 : ['2020-01-01', '60070008', '27', '25']\n",
-      "3 : ['2020-01-02', '60070008', '22', '20']\n",
-      "4 : ['2020-01-03', '60070008', '30', '28']\n",
-      "5 : ['2020-01-04', '60070008', '17', '16']\n",
-      "6 : ['2020-01-05', '60070008', '18', '17']\n",
-      "7 : ['2020-01-06', '60070008', '13', '12']\n",
-      "8 : ['2020-01-07', '60070008', '26', '24']\n",
-      "9 : ['2020-01-08', '60070008', '24', '22']\n",
-      "10 : ['2020-01-09', '60070008', '9', '8']\n"
+      "1: ['date', 'site_id', 'daily_mean_pm10_conentration', 'daily_aqi_value']\n",
+      "2: ['2020-01-01', '60070008', '27', '25']\n",
+      "3: ['2020-01-02', '60070008', '22', '20']\n",
+      "4: ['2020-01-03', '60070008', '30', '28']\n",
+      "5: ['2020-01-04', '60070008', '17', '16']\n",
+      "6: ['2020-01-05', '60070008', '18', '17']\n",
+      "7: ['2020-01-06', '60070008', '13', '12']\n",
+      "8: ['2020-01-07', '60070008', '26', '24']\n",
+      "9: ['2020-01-08', '60070008', '24', '22']\n",
+      "10: ['2020-01-09', '60070008', '9', '8']\n"
      ]
     }
    ],
    "source": [
-    "csv_file = CSVReader(\"../Data/epa_air_quality.csv\",header= False)\n",
+    "csv_file = CSVReader(\"../../Data/epa_air_quality.csv\",header=False)\n",
     "csv_file.print()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0bc0bbd0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
