--- a/Day7/Skeleton/ex01-oop-human.ipynb
+++ b/Day7/Skeleton/ex01-oop-human.ipynb
@@ -11,19 +11,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "cd395c2b-04df-4e61-bbbd-c4f535dc98cd",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Human():\n",
     "    def __init__(self, first_val, last_val):\n",
-    "      "
+    "      self.firstname = first_val\n",
+    "      self.lastname = last_val"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "84c2aaa8-d418-4d56-bd74-eeb4af6ba42d",
    "metadata": {},
    "outputs": [],
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "65dcd06f-de77-4f9e-bfd5-10d36f02f57a",
    "metadata": {},
    "outputs": [],
@@ -52,12 +53,15 @@
     "        self.lastname = last_val\n",
     "        \n",
     "    def introduce(self):\n",
-    "        print(f'My name is {self.firstname} {self.lastname }.')"
+    "        print(f'My name is {self.firstname} {self.lastname }.')\n",
+    "        \n",
+    "    def has_hobby(self, hobby):\n",
+    "        self.hobby = hobby"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "id": "0dcd17fa-c1d2-48db-a681-4abb0f1d4ec6",
    "metadata": {},
    "outputs": [],
@@ -67,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "id": "ae16abb0-7798-4e12-89f9-6bcca3cbe38d",
    "metadata": {},
    "outputs": [],
@@ -77,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "id": "1ee0dbc6-957e-4f8e-a8bd-3a8c9bee0f4d",
    "metadata": {},
    "outputs": [
@@ -87,7 +91,7 @@
        "'golf'"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "id": "220ba8b2-1c5e-4685-a355-00697d0b586d",
    "metadata": {},
    "outputs": [
@@ -108,7 +112,7 @@
        "{'firstname': 'Stephen', 'lastname': 'Curry', 'hobby': 'golf'}"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +132,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -142,7 +146,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
