--- a/Day7/Skeleton/ex04-inheritance.ipynb
+++ b/Day7/Skeleton/ex04-inheritance.ipynb
@@ -30,18 +30,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "40474f61-2667-464a-969d-f582d2c1e039",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Student(Human):\n",
-    "    "
+    "    def __init__(self, first_val, second_val, last_val):\n",
+    "        super().__init__(first_val, second_val)\n",
+    "        self.schoolname = last_val\n",
+    "    \n",
+    "    def introduce(self):\n",
+    "        print(f'My name is {self.firstname} {self.lastname}. I am a student at {self.schoolname}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "1f3b9974-2b08-4ca4-96d7-574343220f99",
    "metadata": {},
    "outputs": [],
@@ -51,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "5c37ff62",
    "metadata": {},
    "outputs": [
@@ -78,7 +83,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -92,7 +97,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
