Completed Day8/Skeleton/ex03

--- a/Day7/Skeleton/ex03-epa.ipynb
+++ b/Day7/Skeleton/ex03-epa.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,17 @@
     "    Add a method called add_aqi_record(self, date, pm10, aqi), which \n",
     "    append {date:(pm10, aqi)} if the date is not yet in aqi_record.\n",
     "    \"\"\"\n",
-    "   "
+    "    def __init__(self, name, station_id, state, county, lon, lat):\n",
+    "        self.name = name\n",
+    "        self.station_id = station_id\n",
+    "        self.state = state\n",
+    "        self.county = county\n",
+    "        self.lon = lon\n",
+    "        self.lat = lat\n",
+    "        self.aqi_record = list()\n",
+    "        \n",
+    "    def __eq__(self, obj):\n",
+    "        return self.station_id == obj.station_id"
    ]
   },
   {
@@ -39,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +59,19 @@
     "    from file_name (.csv) and creates a list of EpaStation objects which includes \n",
     "    name, station_id, state, county, lon, lat and api_record array of an EPA station.\n",
     "    \"\"\"\n",
-    "   "
+    "    with open(file_name, 'r') as file:\n",
+    "        lines = file.readlines()\n",
+    "    for line in lines:\n",
+    "        vals = line.strip().split(',')\n",
+    "        name = vals[0]\n",
+    "        station_id = vals[1]\n",
+    "        state = vals[2]\n",
+    "        county = vals[3]\n",
+    "        lon = float(vals[4])\n",
+    "        lat = float(vals[5])\n",
+    "        pm10 = float(vals[-2])\n",
+    "        api = float(vals[-1])\n",
+    "        "
    ]
   },
   {
@@ -211,7 +233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.13.5"
   },
   "orig_nbformat": 4
  },
