Completed binary search, max avg, two sum examples

--- a/Day9/Skeleton/ex_find_max_avg.ipynb
+++ b/Day9/Skeleton/ex_find_max_avg.ipynb
@@ -21,22 +21,39 @@
    "outputs": [],
    "source": [
     "def findMaxAverage(nums: list, k: int) -> float:\n",
-    "        "
+    "    current, ans = 0, 0\n",
+    "    for i in range(len(nums)+1 - k):\n",
+    "        if i == 0:\n",
+    "            current = sum(nums[:k])\n",
+    "        else:\n",
+    "            current = current - nums[i-1] + nums[i+k-1]\n",
+    "        if ans < current:\n",
+    "            ans = current\n",
+    "    return ans/k"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "3c58c1f5",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "12.75"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
