--- a/Day9/Skeleton/ex_two_sum_2.ipynb
+++ b/Day9/Skeleton/ex_two_sum_2.ipynb
@@ -2,18 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d0a6c956",
    "metadata": {},
    "outputs": [],
    "source": [
     "def twoSum(numbers, target):\n",
-    "       "
+    "    l, r = 0, len(numbers)-1\n",
+    "    while l < r:\n",
+    "        if (numbers[l] + numbers[r]) == target:\n",
+    "            return [l+1, r+1]\n",
+    "        elif (numbers[l] + numbers[r]) < target:\n",
+    "            l += 1\n",
+    "        else:\n",
+    "            r -= 1\n",
+    "    return [-1, -1]\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "79b770cc",
    "metadata": {},
    "outputs": [
@@ -23,7 +32,7 @@
        "[2, 5]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -37,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c5bbe3e",
+   "id": "93b6285c",
    "metadata": {},
    "outputs": [],
    "source": []
