--- a/Day9/Skeleton/ex_binary_search.ipynb
+++ b/Day9/Skeleton/ex_binary_search.ipynb
@@ -2,18 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8ff6fef0",
    "metadata": {},
    "outputs": [],
    "source": [
     "def binary_search(nums: list, target: int):\n",
-    "       "
+    "    l, r = 0, len(nums)\n",
+    "    while l <= r:\n",
+    "        mid = (l + r) // 2\n",
+    "        if nums[mid] == target:\n",
+    "            return mid\n",
+    "        elif nums[mid] < target:\n",
+    "            l = mid + 1\n",
+    "        else:\n",
+    "            r = mid - 1\n",
+    "    return -1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7114f8c4",
    "metadata": {},
    "outputs": [
@@ -23,7 +32,7 @@
        "4"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -36,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "677f7e34",
    "metadata": {},
    "outputs": [
@@ -46,7 +55,7 @@
        "-1"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
